# PlayerAdsUtils

./: CMakeLists.txt  README.md
include/PlayerAdsUtils/: AdPreview.hpp  Advertisement.hpp  Include.hpp  ReportPopup.hpp
src/: AdPreview.cpp  Advertisement.cpp  ReportPopup.cpp
